--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ body {
   font-style: normal;
   margin: 0;
   padding: 0;
-  place-items: center;
+  /* place-items: center; */
   color: var(--black-color);
   background-color: var(--background-color);
 }
