--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -2,25 +2,25 @@
   display: flex;
   margin: 0 auto;
   flex-direction: column;
-  padding: 0 0px 10px 0px;
+  /* padding: 0 0px 10px 0px; */
 }
-@media screen and (min-width: 768px) {
+/* @media screen and (min-width: 768px) {
   .wrapper {
     padding: 0 0px 10px 20px;
   }
-}
-@media screen and (min-width: 1280px) {
+} */
+/* @media screen and (min-width: 1280px) {
   .wrapper {
     padding: 0 32px 10px 32px;
   }
-}
+} */
 .home {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-width: 320px;
-
+  min-width: 280px;
+  margin: 0px 20px;
   height: 390px;
   margin: 0px 20px;
   color: var(--white-color);
@@ -36,8 +36,11 @@
 }
 @media screen and (min-width: 768px) {
   .home {
+    margin: 0px 32px;
+    min-width: 704px;
     border-bottom-left-radius: 60px;
     border-bottom-right-radius: 60px;
+    height: 496px;
   }
   .content {
     gap: 32px;
@@ -103,11 +106,10 @@
 }
 
 .photo {
-  margin: 0px 20px 10px;
+  margin: 0px 20px 10px 20px;
   display: flex;
-  min-width: 320px;
+  min-width: 280px;
   width: auto;
-
   justify-content: center;
   align-items: center;
   background-size: cover;
@@ -131,7 +133,8 @@
   .photo {
     background-image: url('../../assets/imgs/tablet/home-tablet@1x.jpg');
     border-radius: 60px;
-    width: auto;
+    margin: 0px 32px 16px 32px;
+    min-width: 704px;
     height: 496px;
   }
 }
