--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,14 +5,15 @@
 }
 @media screen and (min-width: 768px) {
   .wrapperHome {
-    margin: 16px 32px 0px 32px;
-    padding: 0px 0px 0px 10px;
+    margin: 16px 22px 0px 32px;
+    padding: 0px 10px 0px 0px;
   }
 }
 @media screen and (min-width: 1280px) {
   .wrapperHome {
-    margin: 0px;
-    padding: 0px 0px 0px 10px;
+    margin: 0px auto;
+    margin-top: 16px;
+    padding: 0px;
     max-width: 1216px;
   }
 }
