--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -24,6 +24,7 @@
 
 .burgerButton {
   background-color: transparent;
+  display: block;
 }
 
 @media screen and (min-width: 1280px) {
@@ -46,7 +47,7 @@
   display: none;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1279px) {
   .burgerMenu {
     display: flex;
     flex-direction: column;
