--- a/src/index.css
+++ b/src/index.css
@@ -27,9 +27,9 @@ body {
   font-style: normal;
   margin: 0;
   padding: 0;
-  /* place-items: center; */
+  place-items: center;
   color: var(--black-color);
-  background-color: var(--background-color);
+  background-color: var(--white-color);
 }
 
 h1,
