--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -22,7 +22,7 @@
   align-items: center;
   min-width: 280px;
   margin: 0px 20px;
-  height: 280px;
+  min-height: 280px;
   margin: 0px 20px;
   color: var(--white-color);
   padding: 10px 20px 20px 20px;
@@ -42,18 +42,18 @@
     min-width: 704px;
     border-bottom-left-radius: 60px;
     border-bottom-right-radius: 60px;
-    height: 384px;
+    height: 385px;
   }
   .content {
     gap: 32px;
   }
 }
 @media screen and (max-width: 1280px) {
-  .content {
+  /* .content {
     padding: 12px 64px;
-  }
+  } */
 }
-@media screen and (max-width: 1280px) {
+@media screen and (min-width: 1280px) {
   .home {
     max-width: 1216px;
     height: 270px;
@@ -61,6 +61,7 @@
 }
 .title {
   color: var(--white-color);
+  font-family: 'Monrope', sans-serif;
   font-size: 46px;
   font-weight: 700;
   line-height: 0.86;
@@ -69,7 +70,9 @@
 @media screen and (min-width: 768px) {
   .title {
     font-size: 80px;
-    margin-bottom: 32px;
+    line-height: 77px;
+    margin-top: 57px;
+    /* margin-bottom: 32px; */
   }
 }
 @media screen and (min-width: 1280px) {
@@ -97,6 +100,7 @@
     font-size: 18px;
     line-height: 1.22;
     display: flex;
+    /* margin-bottom: 32px; */
     align-self: flex-end;
     width: 255px;
   }
