--- a/src/components/NoticesItem/NoticesItem.module.css
+++ b/src/components/NoticesItem/NoticesItem.module.css
@@ -86,7 +86,10 @@
   display: flex;
   align-self: flex-start;
 }
-
+.icon {
+  width: 18px;
+  height: 18px;
+}
 /* .price {
   font-size: 16px;
   font-weight: 700;
