--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,8 @@
-.wrapperHome {
+/* .wrapperHome {
   background-color: aqua;
   min-width: 280px;
   margin: 10px 20px 0 20px;
-}
+} */
 /* @media screen and (min-width: 768px) {
   .wrapperHome {
     margin: 0 auto;
@@ -10,15 +10,35 @@
     max-width: 704px;
   }
 } */
-@media screen and (min-width: 1280px) {
+/* @media screen and (min-width: 1280px) {
   .wrapperHome {
-    /* margin: 0px auto; */
     margin-top: 16px;
     padding: 0px;
     max-width: 1216px;
   }
+} */
+.wrapperHome {
+  max-width: 335px;
+  margin: 0 auto;
+  margin-top: 20px;
+  padding: 0 20px;
 }
 
+@media screen and (min-width: 768px) {
+  .wrapperHome {
+    max-width: 704px;
+    margin-top: 32px;
+    padding: 0px;
+    /* padding: 0 32px; */
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .wrapperHome {
+    max-width: 1153px;
+    /* padding: 0 63px 0 64px; */
+  }
+}
 .header {
   display: flex;
   justify-content: space-between;
@@ -49,7 +69,7 @@
     padding: 32px 64px;
   }
   .homeHeader {
-    padding: 32px 64px 26px 32px;
+    /* padding: 32px 64px 26px 32px; */
     max-width: 1216px;
   }
 }
