--- a/src/index.css
+++ b/src/index.css
@@ -21,13 +21,12 @@
 }
 
 body {
+  /* width: 100%; */
+  /* height: 100vh; */
   min-width: 320px;
-  min-height: 100vh;
   margin: 0 auto;
-  width: 100%;
   font-family: 'Manrope', sans-serif;
   font-weight: 400;
-  /* height: 100hv; */
   font-size: 16px;
   font-style: normal;
   padding: 0;
