--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -15,21 +15,27 @@
   }
 } */
 /* padding: 160px 80px 160px 80px; */
+/* .container {
+  max-width: 1280px; 
+  margin: 0 auto;
+  padding: 0 20px; 
+} */
+
 .home {
   display: flex;
   line-height: 0.6;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* min-width: 280px; */
-  margin: 0px 20px;
-  /* min-height: 280px; */
+  /* margin: 0px 20px; */
   color: var(--white-color);
   padding: 10px 20px 20px 20px;
   border-bottom-left-radius: 30px;
   border-bottom-right-radius: 30px;
   background-color: var(--main-color);
 }
+/* min-height: 280px; */
+/* min-width: 280px; */
 .content {
   display: flex;
   flex-direction: column;
@@ -39,7 +45,7 @@
   .home {
     /* margin: 0px 32px; */
     /* width: 704px; */
-    padding-top: 0px;
+    /* padding-top: 0px; */
     border-bottom-left-radius: 60px;
     border-bottom-right-radius: 60px;
     /* height: 303px; */
@@ -123,7 +129,7 @@
 }
 
 .photo {
-  margin: 0px 20px 10px 20px;
+  /* margin: 0px 20px 10px 20px; */
   display: flex;
   min-width: 280px;
   width: auto;
@@ -171,5 +177,7 @@
   .photo {
     background-image: url('../src/assets/imgs/desktop/home-desk@2x.jpg');
     max-height: 384px;
+    /* adeded */
+    max-width: 1153px;
   }
 }
