--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -85,6 +85,7 @@
   background-position: center;
   background-repeat: no-repeat;
   height: 402px;
+  margin-bottom: 20px;
   border-radius: 30px;
 }
 
