--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -55,12 +55,16 @@ input.invalid {
 }
 .togglePassword {
   position: absolute;
+  top: 50%;
   right: 10px;
+  transform: translateY(-50%);
   cursor: pointer;
-  font-size: 18px;
-  /* margin-top: 15px; */
   border: none;
   background: none;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 input.invalid + .togglePassword {
   margin-bottom: 17px;
@@ -68,7 +72,7 @@ input.invalid + .togglePassword {
 @media screen and (min-width: 768px) {
   .togglePassword {
     right: 16px;
-    font-size: 32px;
+    font-size: 22px;
   }
 }
 
