--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,4 +1,4 @@
-.home {
+/* .home {
   display: flex;
   line-height: 0.6;
   flex-direction: column;
@@ -122,6 +122,126 @@
 @media screen and (min-width: 1280px) and (min-resolution: 192dpi) {
   .photo {
     background-image: url('../../assets/imgs/desktop/home-desk@2x.jpg');
+    max-height: 384px;
+    margin-bottom: 10px;
+  }
+} */
+.home {
+  display: flex;
+  line-height: 0.6;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: var(--white-color);
+  padding: 10px 20px 20px 20px;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
+  background-color: var(--main-color);
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+@media screen and (min-width: 768px) {
+  .home {
+    border-bottom-left-radius: 60px;
+    border-bottom-right-radius: 60px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .home {
+    max-width: 1280px;
+    max-height: 270px;
+  }
+}
+
+.title {
+  color: var(--white-color);
+  font-size: 46px;
+  font-weight: 700;
+  line-height: 0.86;
+}
+
+.title .light {
+  color: rgba(255, 255, 255, 0.4);
+}
+
+.description {
+  color: var(--white-color);
+  font-size: 14px;
+  font-weight: 500;
+  margin-bottom: 10px;
+  line-height: 1.28;
+}
+
+@media screen and (min-width: 768px) {
+  .title {
+    font-size: 80px;
+    line-height: 1;
+  }
+  .description {
+    font-size: 18px;
+    line-height: 1.22;
+    display: flex;
+    align-self: flex-end;
+    width: 255px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .title {
+    font-size: 90px;
+    width: 760px;
+    margin-bottom: 10px;
+  }
+  .content {
+    flex-direction: row;
+    gap: 73px;
+  }
+  .description {
+    margin-bottom: 0px;
+  }
+}
+
+/* Оптимізована секція зображення */
+.photo {
+  display: flex;
+  min-width: 280px;
+  width: auto;
+  justify-content: center;
+  align-items: center;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 402px;
+  margin-bottom: 20px;
+  border-radius: 30px;
+  will-change: transform, opacity; /* Оптимізація рендерингу */
+}
+
+/* Використання image-set() для оптимального вибору зображення */
+.photo {
+  background-image: image-set(
+    url('../../assets/imgs/mobile/home-mob@1x.webp') 1x,
+    url('../../assets/imgs/mobile/home-mob@2x.webp') 2x,
+    url('../../assets/imgs/tablet/home-tablet@1x.webp') 768w,
+    url('../../assets/imgs/desktop/home-desk@1x.webp') 1280w
+  );
+}
+
+@media screen and (min-width: 768px) {
+  .photo {
+    border-radius: 60px;
+    height: 496px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .photo {
     max-height: 384px;
     margin-bottom: 10px;
   }
